--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-table-component": "^1.2.4",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
