--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-ssl-pinning": "^1.5.7",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-window": "^1.8.9"
